--- a/notebooks/requirements.txt
+++ b/notebooks/requirements.txt
@@ -1,3 +1,7 @@
+SocialMediaStressDetection/notebooks/
+├── requirements.txt
+└── Stress_Detection_Streamlit.py
+
 altair==5.4.1
 attrs==24.2.0
 blinker==1.8.2
