--- a/notebooks/requirements.txt
+++ b/notebooks/requirements.txt
@@ -2,6 +2,7 @@ absl-py==2.1.0
 altair==5.4.1
 annotated-types==0.7.0
 anyio==4.6.0
+astunparse==1.6.3
 attrs==24.2.0
 blinker==1.8.2
 blis==1.0.1
@@ -17,9 +18,13 @@ cymem==2.0.8
 distro==1.9.0
 en_core_web_lg @ https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.8.0/en_core_web_lg-3.8.0-py3-none-any.whl#sha256=293e9547a655b25499198ab15a525b05b9407a75f10255e405e8c3854329ab63
 filelock==3.16.1
+flatbuffers==24.3.25
 fsspec==2024.9.0
+gast==0.6.0
 gitdb==4.0.11
 GitPython==3.1.43
+google-pasta==0.2.0
+grpcio==1.66.2
 h11==0.14.0
 h5py==3.12.1
 httpcore==1.0.6
@@ -34,22 +39,25 @@ jsonschema-specifications==2023.12.1
 keras==3.6.0
 langcodes==3.4.1
 language_data==1.2.0
+libclang==18.1.1
 marisa-trie==1.2.0
+Markdown==3.7
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 mdurl==0.1.2
-ml_dtypes==0.5.0
+ml-dtypes==0.4.1
 murmurhash==1.0.10
 namex==0.0.8
 narwhals==1.8.4
-numpy==2.0.2
+numpy==1.26.4
 openai==1.51.2
+opt_einsum==3.4.0
 optree==0.13.0
 packaging==24.1
 pandas==2.2.3
 pillow==10.4.0
 preshed==3.0.9
-protobuf==5.28.2
+protobuf==4.25.5
 pyarrow==17.0.0
 pydantic==2.9.2
 pydantic_core==2.23.4
@@ -78,6 +86,11 @@ spacy-loggers==1.0.5
 srsly==2.4.8
 streamlit==1.38.0
 tenacity==8.5.0
+tensorboard==2.17.1
+tensorboard-data-server==0.7.2
+tensorflow==2.17.0
+tensorflow-intel==2.17.0
+termcolor==2.5.0
 thinc==8.3.2
 threadpoolctl==3.5.0
 tokenizers==0.20.1
@@ -92,4 +105,6 @@ urllib3==2.2.3
 wasabi==1.1.3
 watchdog==4.0.2
 weasel==0.4.1
+Werkzeug==3.0.4
+wheel==0.44.0
 wrapt==1.16.0
