--- a/notebooks/requirements.txt
+++ b/notebooks/requirements.txt
@@ -49,7 +49,7 @@ ml-dtypes==0.4.1
 murmurhash==1.0.10
 namex==0.0.8
 narwhals==1.8.4
-numpy==1.26.4
+numpy>=2.0.0,<3.0.0
 openai==1.51.2
 opt_einsum==3.4.0
 optree==0.13.0
