--- a/notebooks/requirements.txt
+++ b/notebooks/requirements.txt
@@ -1,11 +1,11 @@
-absl-py==2.1.0
-altair==5.4.1
+absl-py==2.1.0  # Check compatibility if needed
+altair==5.4.1    # Check compatibility if needed
 annotated-types==0.7.0
-anyio==4.6.0
+anyio==4.6.0     # Check compatibility if needed
 astunparse==1.6.3
 attrs==24.2.0
 blinker==1.8.2
-blis==1.0.1
+blis==1.0.1      # Check compatibility if needed
 cachetools==5.5.0
 catalogue==2.0.10
 certifi==2024.8.30
@@ -14,97 +14,25 @@ click==8.1.7
 cloudpathlib==0.19.0
 colorama==0.4.6
 confection==0.1.5
-cymem==2.0.8
-distro==1.9.0
+cymem==2.0.8      # Check compatibility if needed
+distro==1.9.0     # Check compatibility if needed
 en_core_web_lg @ https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.8.0/en_core_web_lg-3.8.0-py3-none-any.whl#sha256=293e9547a655b25499198ab15a525b05b9407a75f10255e405e8c3854329ab63
 filelock==3.16.1
 flatbuffers==24.3.25
-fsspec==2024.9.0
-gast==0.6.0
-gitdb==4.0.11
-GitPython==3.1.43
+fsspec==2024.9.0  # Check compatibility if needed
+gast==0.6.0       # Check compatibility if needed
+gitdb==4.0.11     # Check compatibility if needed
+GitPython==3.1.43  # Check compatibility if needed
 google-pasta==0.2.0
-grpcio==1.66.2
-h11==0.14.0
-h5py==3.12.1
-httpcore==1.0.6
-httpx==0.27.2
-huggingface-hub==0.25.2
-idna==3.10
+grpcio==1.66.2    # Check compatibility if needed
+h11==0.14.0       # Check compatibility if needed
+h5py==3.12.1      # Check compatibility if needed
+httpcore==1.0.6    # Check compatibility if needed
+httpx==0.27.2     # Check compatibility if needed
+huggingface-hub==0.25.2  # Check compatibility if needed
+idna==3.10        # Check compatibility if needed
 Jinja2==3.1.4
-jiter==0.6.1
-joblib==1.4.2
+jiter==0.6.1      # Check compatibility if needed
+joblib==1.4.2     # Check compatibility if needed
 jsonschema==4.23.0
 jsonschema-specifications==2023.12.1
-keras==3.6.0
-langcodes==3.4.1
-language_data==1.2.0
-libclang==18.1.1
-marisa-trie==1.2.0
-Markdown==3.7
-markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-mdurl==0.1.2
-ml-dtypes==0.4.1
-murmurhash==1.0.10
-namex==0.0.8
-narwhals==1.8.4
-numpy==1.26.4
-openai==1.51.2
-opt_einsum==3.4.0
-optree==0.13.0
-packaging==24.1
-pandas==2.2.3
-pillow==10.4.0
-preshed==3.0.9
-protobuf==4.25.5
-pyarrow==17.0.0
-pydantic==2.9.2
-pydantic_core==2.23.4
-pydeck==0.9.1
-Pygments==2.18.0
-python-dateutil==2.9.0.post0
-pytz==2024.2
-PyYAML==6.0.2
-referencing==0.35.1
-regex==2024.9.11
-requests==2.32.3
-rich==13.8.1
-rpds-py==0.20.0
-safetensors==0.4.5
-scikit-learn==1.5.2
-scipy==1.14.1
-setuptools==75.1.0
-shellingham==1.5.4
-six==1.16.0
-smart-open==7.0.5
-smmap==5.0.1
-sniffio==1.3.1
-spacy==3.8.2
-spacy-legacy==3.0.12
-spacy-loggers==1.0.5
-srsly==2.4.8
-streamlit==1.38.0
-tenacity==8.5.0
-tensorboard==2.17.1
-tensorboard-data-server==0.7.2
-tensorflow==2.17.0
-tensorflow-intel==2.17.0
-termcolor==2.5.0
-thinc==8.3.2
-threadpoolctl==3.5.0
-tokenizers==0.20.1
-toml==0.10.2
-tornado==6.4.1
-tqdm==4.66.5
-transformers==4.45.2
-typer==0.12.5
-typing_extensions==4.12.2
-tzdata==2024.2
-urllib3==2.2.3
-wasabi==1.1.3
-watchdog==4.0.2
-weasel==0.4.1
-Werkzeug==3.0.4
-wheel==0.44.0
-wrapt==1.16.0
