--- a/notebooks/requirements.txt
+++ b/notebooks/requirements.txt
@@ -17,13 +17,13 @@ markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 mdurl==0.1.2
 narwhals==1.8.4
-numpy==2.1.1
+numpy>=1.26.0
 packaging==24.1
-pandas==2.2.3
+pandas==2.2.3  
 pillow==10.4.0
-protobuf==3.20.3
+protobuf==3.20.3  
 pyarrow==17.0.0
-pydeck==0.9.1
+pydeck==0.9.1  
 Pygments==2.18.0
 python-dateutil==2.9.0.post0
 pytz==2024.2
@@ -31,8 +31,8 @@ referencing==0.35.1
 requests==2.32.3
 rich==13.8.1
 rpds-py==0.20.0
-scikit-learn==1.5.2
-scipy==1.14.1
+scikit-learn==1.5.2  
+scipy==1.14.1  
 six==1.16.0
 smmap==5.0.1
 streamlit==1.38.0
